welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: illegal start of simple pattern
 	for(<-1 to 4){
            ^PatternPicture:13: error: '<-' expected but '}' found.
}
^