welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {def faireMotif {
	def faireL {
	var j = Color.YELLOW
 	var r = Color.RED
 	var b = Color.BLUE
 	var v = Color.GREEN
 	for(<-1 to 4){
 		avance();setCouleurBrosse();baisseBrosse();LeveBrosse();avance();setCouleurBrosse();
 		baisseBrosse();leveBrosse();avance();gauche();
 		}
}
}
}